Correction sur le responsive (version mobile)

--- a/style.css
+++ b/style.css
@@ -779,6 +779,7 @@ footer{
         grid-area: header;
         padding: 0;
         position: relative;
+        width: 100vw;
     }
 
     #logo{
@@ -860,6 +861,7 @@ footer{
     /*##   SEARCH SECTION   ###########################*/
     .search{
         grid-area: search;
+        width: 100vw;
     }
     
     .search > div{
@@ -918,6 +920,10 @@ footer{
         display: block;
     }
 
+    .filter-items-container div{
+        margin: 5px 5px;
+    }
+
     .filter-items-container label{
         padding: 12px 20px;
     }
@@ -932,6 +938,7 @@ footer{
         display: flex;
         flex-direction: column;
         background-color: #fff;
+        width: 100vw;
     }
 
     .book-container{
@@ -942,7 +949,12 @@ footer{
     }
 
     .book-container .book-card{
-        height: 180px;
+        height: 190px;
+    }
+
+    .book-card .card-content{
+        top: 55%;
+        padding: 5px 10px;
     }
 
     .book .see-more:active{
@@ -958,6 +970,12 @@ footer{
         margin: 0;
         padding: 20px;
         border-radius: 0;
+        width: 100vw;
+    }
+
+    .popular-card{
+        height: 190px;
+        width: 100%;
     }
 
     /* ACTIVITY SECTION */
@@ -981,7 +999,7 @@ footer{
 
     .activity-card-container{
         width: 100%;
-        height: 180px;
+        height: 190px;
     }
 
     .activity-card{
@@ -990,6 +1008,10 @@ footer{
 
     .vieux-port{
         /* width: 70%; */
+    }
+
+    .activity-card-img-calanques{
+        height: unset;
     }
 
     /* FOOTER */
